added pages and DB for CVES portal

--- a/cves/app/views/Application/index.html
+++ b/cves/app/views/Application/index.html
@@ -4,9 +4,9 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>CDAAS Automan</h1>
-        <p>This is the prototyping of CDAAS Portal, the hub for main CDAAS components and services. Use wizard below to trigger jobs on Product CI and Stack CI.</p>
-        <p><a href="/regression/wizard" class="btn btn-primary btn-large">Run Wizard &raquo;</a></p>
+        <h1>CVES Portal</h1>
+        <p>This is the User Portal for Clean Vehicle Evaluation System(CVES), the aim of CVES is to evaluate user's driving behavior and determine the best type of clean vehicle for user</p>
+        <p><img src="/public/images/greencar.jpg" width="304" height="228" alt="GreenCar"> </p>
       </div>
 
       <!-- Example row of columns -->
