--- a/cves/app/views/Application/top_head.html
+++ b/cves/app/views/Application/top_head.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CDAAS Portal</title>
+    <title>CVES Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CDAAS Portal">
-    <meta name="author" content="CDAAS">
+    <meta name="description" content="CVES Portal">
+    <meta name="author" content="yangli907">
 
     <!-- Le styles -->
     <link href="/public/stylesheets/bootstrap.css" rel="stylesheet">
@@ -25,15 +25,17 @@
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/public/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/public/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="/public/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="/public/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/public/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/public/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="stylesheet" type="text/css" media="screen" href="/public/stylesheets/bootstrap-datetimepicker.min.css">
+    <link rel="shortcut icon" href="/public/ico/favicon.png">
     <link href="/public/stylesheets/bootstrap-wizard.css" rel="stylesheet" />                               
     <link href="/public/stylesheets/chosen.css" rel="stylesheet" />
                                    
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/public/javascripts/jquery-1.7.1.js"></script>
     <script src="/public/javascripts/jquery.dataTables.js"></script>
+    <script src="/public/javascripts/bootstrap.min.js"></script>
     <script src="/public/javascripts/bootstrap-transition.js"></script>
     <script src="/public/javascripts/bootstrap-alert.js"></script>
     <script src="/public/javascripts/bootstrap-modal.js"></script>
@@ -47,6 +49,7 @@
     <script src="/public/javascripts/bootstrap-carousel.js"></script>
     <script src="/public/javascripts/bootstrap-typeahead.js"></script>
     <script src="/public/javascripts/bootstrap-wizard.min.js"></script>
+    <script src="/public/javascripts/bootstrap-datepicker.js"></script>
     <script src="/public/javascripts/chosen.jquery.min.js"></script>
   </head>
 
