--- a/cves/app/views/Application/top_nav.html
+++ b/cves/app/views/Application/top_nav.html
@@ -6,30 +6,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">CDAAS Portal</a>
+          <a class="brand" href="/">CVES Portal</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li #{if (topnav == null || topnav == "home")} class="active" #{/if}><a href="/">Home</a></li>
-              <li #{if (topnav == "env")} class="active" #{/if}><a href="/env">Environment</a></li>
-              <li #{if (topnav == "build")} class="active" #{/if}><a href="/build">Build History</a></li>
+              <li #{if (topnav == "env")} class="active" #{/if}><a href="/build">Driving History</a></li>
+              <li #{if (topnav == "build")} class="active" #{/if}><a href="#">Report</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Jenkins<b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account Management<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://cassini-ci.qa.ebay.com" target=_blank>Prod CI</a></li>
-                  <li><a href="http://cassini-ci-dev.qa.ebay.com" target=_blank>Dev CI</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li class="divider"></li>
-                  <li class="nav-header">Wizard</li>
-                  <li><a href="#">Deployment</a></li>
+                  <li><a href="#" target=_blank>Preference</a></li>
+                  <li><a href="#" target=_blank>Log Out</a></li>
                 </ul>
               </li>
             </ul>
             <form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="Email">
+              <input class="span2" type="text" placeholder="User ID">
               <input class="span2" type="password" placeholder="Password">
               <button type="submit" class="btn">Sign in</button>
             </form>
